--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 <body>
   <h1>Halaman Home</h1>
 
+  <p>halaman home menggambarkan landing page</p>
+
+  <ol>
+    <li>info lokasi warnet</li>
+    <li>Fitur Warnet</li>
+    <li>keaktifan warnet</li>
+  </ol>
+
 </body>
 
 </html>
